--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -1,3 +1,4 @@
+%THIS IS PROBTHOERY%
 \usepackage[lining,semibold,scaled=1]{ebgaramond}% Latex BOLD renders with ebgaramond semibold
 \usepackage[T1]{fontenc} % best for Western European languages
 
@@ -460,6 +461,7 @@
 									\newcommand{\convpr}{\xrightarrow[]{\pr}}
 									\newcommand{\convd}{\xrightarrow[]{\text{d}}}
 									\newcommand{\convlp}{\xrightarrow[]{\lp}}
+									\newcommand{\lone}{L^{1}}
 									\newcommand{\convw}{\xrightarrow[]{\mathrm{weak}}}
 									\newcommand{\as}{\text{ a.s.}}
 									\newcommand{\asstnr}{\sim N(0,1)}
