--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -454,6 +454,7 @@
 									\newcommand{\Nstar}{\N^{*}}
 									\newcommand{\Rext}{\overline{\R}}
 									\newcommand{\io}{\text{ i.o.}}
+									\newcommand{\normale}{\mathcal{N}}
 									\newcommand{\equalexpl}[1]{%
 										\underset{\substack{\uparrow\\\mathrlap{\text{\vspace{-3cm}\hspace{-1em}#1}}}}{=}}
 									\newcommand{\dif}{\mathop{}\!\mathrm{d}}
@@ -529,8 +530,8 @@
 									\newcommand{\mmN}{\mathcal{N}}
 									\newcommand{\BM}{(B_t)_{t\geq 0}}
 									\newcommand{\PX}{(X_t)_{t\geq 0}}
-									\newcommand{\var}{\mathbb{V}\mathrm{ar}\,}
-									\newcommand{\cov}{\mathbb{C}\mathrm{ov}\,}
+									\newcommand{\var}{\mathbb{V}\!\mathrm{ar}\,}
+									\newcommand{\cov}{\mathbb{C}\!\mathrm{ov}\,}
 									\newcommand{\lp}{L^{p}}
 									\newcommand{\BMF}{\left((B_t)_{t\geq 0},\mathcal{F}_t \right)}
 									\newcommand{\mFt}{\mathcal{F}_t}
@@ -539,6 +540,9 @@
 									\newcommand{\norm}[1]{\left|\negthinspace\left|#1\right|\negthinspace\right|}
 		\newcommand{\pr}{\mathbb{P}}
 		\newcommand{\indi}{\mathbb{1}}
+		\newcommand{\trns}[1]{{#1}^{\scriptscriptstyle\mathsf{T}}}
+		\newcommand{\iid}{\stackrel{\mathrm{iid}}{\sim}}
+		\newcommand{\unmezz}{\frac{1}{2}}
 		\newcommand{\sa}{$\sigma$-algebra}	\newcommand{\rv}{random variable}
 		\titleformat{\section}{\color{SkyBlue4}}{\color{red}\thesection}{1em}{}
 		\subsectionfont{\color{SkyBlue4!90!black}\bfseries}
