--- a/PT/chap1.tex
+++ b/PT/chap1.tex
@@ -1352,7 +1352,13 @@
 		\[\pr(H)=\pr(H\cap H)=\pr(H)\pr(H)\]
 		and the solution to this equation can only be 1 or 0.
 	\end{fancyproof}
-	We must remember that this is a special case where we have independence: this, in an experimental scenario, is modeled by independent trials. This result can be applied of concept of convergence. The idea is to build up instruments useful to the analysis of real \rv{} in their limits
+	We must remember that this is a special case where we have independence: this, in an experimental scenario, is modeled by independent trials. This result can be 
+	applied of concept of convergence. The idea is to build up instruments useful to the analysis of real \rv{} in their limits. \par
+	Oh, also: there is a fucking corollary of this piece of shit theorem. They didn't tell me and I was trying to do a fucking shit fucking god fucking dick in ass fucking 
+	kill myself exercise about tail \sa s and I couldn't for the fucking love of fucking god understand and I wanted to cry and I cried and this was because there is a fucking corollary of this horrible law that goes like this:
+	\begin{corollary}
+		If $\G_1,\G_2,\ldots$ are independent, then every \rv{} $X$ in the tail \sa{} $\tau$ (which means, $X$ is measurable with respect to $\tau$) must be a constant $c\in\R\;\pr-\as$.
+	\end{corollary}
 	\section{Convergence of \rv s and asymptotic behavior}
 	\subsection{Convergence of real sequences}
 	Let ${(x_n)}_n$ be a sequence in $\R,n\in\Nstar$. Then 
