txs auto checkin

--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -79,5 +79,6 @@
 	
 	%%%%%%%%%%%%%%% NEW SECTION %%%%%%%%%%%%%%% 
 	\section{Exercise 1}
-	ahah
+	Negative exponential distribution:
+	
 \end{document}
